--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -10,19 +10,30 @@ jobs:
     name: Deploy docs
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
-      - name: Install requirements
+      - name: Install pyenv
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-developer.txt
-      - name: Deploying MkDocs documentation
+          curl https://pyenv.run | bash
+          echo "$HOME/.pyenv/bin" >> $GITHUB_PATH
+          echo "$HOME/.pyenv/shims" >> $GITHUB_PATH
+
+      - name: Install Python 3.11 with pyenv
         run: |
-          mkdocs build
-          mkdocs gh-deploy --force
+          pyenv install 3.11
+          pyenv global 3.11
+
+      - name: Setup development environment
+        run: |
+          make setup
+
+      - name: Deploy MkDocs documentation
+        run: |
+          make deploy_docs
         
     
