--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ dev = [
     "bandit>=1.7.0",
     "nbstripout>=0.6.0",
     "pytest>=7.0.0",
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.0.0",
+    "mkdocstrings>=0.24.0",
+    "mkdocstrings-python>=1.7.0",
+    "termynal>=0.13.0",
 ]
 
 [build-system]
