--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,41 @@
 [project]
-name = "my-ds-project"
+name = "openaq-anomaly-prediction"
 version = "0.1.0"
-description = "A boilerplate template for data science projects with pre-commit hooks and best practices"
+description = "A data science project to detect and predict anomalies in the air quality from OpenAQ data."
 authors = [
-    {name = "Your Name", email = "you@example.com"}
+    {name = "Denis CCK", email = "2627434+denis-cck@users.noreply.github.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
-dynamic = ["dependencies"]
+requires-python = ">=3.12.0, <3.13"
 
-[project.optional-dependencies]
-dev = [
-    "pre-commit>=3.0.0",
-    "codespell>=2.2.0",
-    "ruff>=0.1.0",
-    "bandit>=1.7.0",
-    "nbstripout>=0.6.0",
-    "pytest>=7.0.0",
-    "mkdocs>=1.5.0",
-    "mkdocs-material>=9.0.0",
-    "mkdocstrings>=0.24.0",
-    "mkdocstrings-python>=1.7.0",
-    "termynal>=0.13.0",
+dependencies = [
+    "loguru (>=0.7.3,<0.8.0)",
+    "numpy (>=2.3.5,<3.0.0)",
+    "pandas (>=2.3.3,<3.0.0)",
+    "matplotlib (>=3.10.7,<4.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "openaq (>=0.6.0,<0.7.0)",
+    "mlflow (>=3.7.0,<4.0.0)"
 ]
 
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
+[dependency-groups]
+dev = [
+    "ruff (>=0.14.8,<0.15.0)",
+    "ipykernel (>=7.1.0,<8.0.0)"
+]
 
-[tool.setuptools]
-package-dir = {"" = "src"}
-packages = ["my_ds_project"]
 
-[tool.setuptools.package-data]
-"*" = ["*.md", "*.txt", "*.yaml", "*.yml"]
+# OTHER WAYS ========================================
 
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
+# PIP
+# Dev dependencies for pip install -e ".[dev]"
+# [project.optional-dependencies]
+# dev = []
+
+# PIP OR UV
+# Make the package in src/ available for import with `pip install -e .`
+# [build-system]
+# requires = ["setuptools>=61.0.0"]
+# build-backend = "setuptools.build_meta"
+# [tool.setuptools.packages]
+# find = {where = ["src"]}
