--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "matplotlib (>=3.10.7,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "openaq (>=0.6.0,<0.7.0)",
-    "mlflow (>=3.7.0,<4.0.0)"
+    "mlflow (>=3.7.0,<4.0.0)",
+    "boto3 (>=1.42.5,<2.0.0)",
+    "pyarrow (>=22.0.0,<23.0.0)",
 ]
 
 [dependency-groups]
