--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "mlflow (>=3.7.0,<4.0.0)",
     "boto3 (>=1.42.5,<2.0.0)",
     "pyarrow (>=22.0.0,<23.0.0)",
+    "duckdb (>=1.4.3,<2.0.0)",
+    "statsforecast (>=2.0.3,<3.0.0)",
 ]
 
 [dependency-groups]
