--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,13 @@ dependencies = [
     "pyarrow (>=22.0.0,<23.0.0)",
     "duckdb (>=1.4.3,<2.0.0)",
     "statsforecast (>=2.0.3,<3.0.0)",
+    "ipykernel (>=7.1.0,<8.0.0)",
+    "plotly (>=6.5.0,<7.0.0)",
+    "nbformat (>=5.10.4,<6.0.0)",
+    "ipywidgets (>=8.1.8,<9.0.0)",
+    "google-cloud-bigquery (>=3.39.0,<4.0.0)",
+    "dbt-core (>=1.11.2,<2.0.0)",
+    "dbt-bigquery (>=1.11.0,<2.0.0)",
 ]
 
 [dependency-groups]
