--- a/dbt_transformation/profiles.yml
+++ b/dbt_transformation/profiles.yml
@@ -6,7 +6,7 @@ oap_profile:
       type: bigquery
       method: service-account
       project: "{{ env_var('GOOGLE_PROJECT_ID') }}"  # =database
-      dataset: "{{ env_var('DBT_DEFAULT_DATASET', 'oap_dev') }}"  # =schema
+      dataset: "{{ env_var('DBT_DEFAULT_DATASET', 'dev') }}"  # =schema
       keyfile: "{{ env_var('GOOGLE_APPLICATION_CREDENTIALS') }}"
       location: EU
       threads: 4
@@ -19,7 +19,7 @@ oap_profile:
       type: bigquery
       method: oauth
       project: "{{ env_var('GOOGLE_PROJECT_ID') }}"  # =database
-      dataset: "{{ env_var('DBT_DEFAULT_DATASET', 'oap_prod') }}"  # =schema
+      dataset: "{{ env_var('DBT_DEFAULT_DATASET', 'prod') }}"  # =schema
       location: EU
       threads: 4
       job_execution_timeout_seconds: 300
